--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,23 @@
 <head>
   <meta charset="utf-8"/>
   <title>React Webcam</title>
+  <style>
+    body {
+      font-family: "Helvetica Neue", Helvetica, sans-serif;
+      font-weight: 200;
+      margin: 0 auto;
+      width: 750px;
+    }
+    textarea {
+      font-family: monospace;
+      font-size: inherit;
+      height: 150px;
+      width: 100%;
+    }
+    pre {
+      white-space: pre-wrap;
+    }
+  </style>
 </head>
 <body>
 <script src="//fb.me/react-with-addons-0.12.1.js"></script>
@@ -22,6 +39,7 @@
 
       return (
         <div>
+          <h1>react-webcam</h1>
           <Webcam ref='webcam'/>
           <button onClick={this.screenshot}>screenshot</button>
           {screenshots}
