--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 <script src="//fb.me/react-with-addons-0.12.1.js"></script>
 <script src="//fb.me/JSXTransformer-0.12.1.js"></script>
-<script src="../dist/react-webcam.js"></script>
+<script src="dist/react-webcam.js"></script>
 <script type="text/jsx">
   var App = React.createClass({
     getInitialState: function() {
