--- a/examples/index.html
+++ b/examples/index.html
@@ -61,6 +61,9 @@
 <script src="//fb.me/JSXTransformer-0.13.3.js"></script>
 <script src="../dist/react-webcam.js"></script>
 <script type="text/jsx">
+  // getUserMedia only works for secure pages
+  if (!/https/.test(window.location.protocol)) window.location.protocol = 'https://';
+
   var App = React.createClass({
     getInitialState: function() {
       return {
