Update peerDependency to use react and react-dom v0.14, removes deprecation warnings from #22

--- a/examples/index.html
+++ b/examples/index.html
@@ -57,62 +57,64 @@
   </style>
 </head>
 <body>
-<script src="//fb.me/react-0.13.3.js"></script>
-<script src="//fb.me/JSXTransformer-0.13.3.js"></script>
-<script src="../dist/react-webcam.js"></script>
-<script type="text/jsx">
-  // getUserMedia only works for secure pages
-  if (!/https/.test(window.location.protocol)) window.location.protocol = 'https://';
+  <div id="root"></div>
+  <script src="//fb.me/react-with-addons-0.14.7.js"></script>
+  <script src="//fb.me/react-dom-0.14.7.js"></script>
+  <script src="//npmcdn.com/babel-transform-in-browser@6.4.6/dist/btib.min.js"></script>
+  <script src="../dist/react-webcam.js"></script>
+  <script type="text/es2015">
+    // getUserMedia only works for secure pages
+    if (!/https/.test(window.location.protocol)) window.location.protocol = 'https://';
 
-  var App = React.createClass({
-    getInitialState: function() {
-      return {
-        screenshot: null,
-        tab: 0
-      };
-    },
+    var App = React.createClass({
+      getInitialState: function() {
+        return {
+          screenshot: null,
+          tab: 0
+        };
+      },
 
-    render: function() {
-      return (
-        <div>
-          <h1>react-webcam</h1>
-          <Webcam
-            ref='webcam'
-          />
+      render: function() {
+        return (
           <div>
-            <h2>CSS Filters</h2>
-            <div className='webcams'>
-              <Webcam width='212' height='160'/>
-              <Webcam width='212' height='160'/>
-              <Webcam width='212' height='160'/>
-              <Webcam width='212' height='160'/>
-              <Webcam width='212' height='160'/>
-              <Webcam width='212' height='160'/>
-              <Webcam width='212' height='160'/>
-              <Webcam width='212' height='160'/>
-              <Webcam width='212' height='160'/>
-            </div>
-          </div>
-          <div>
-            <h2>Screenshots</h2>
-            <div className='screenshots'>
-              <div className='controls'>
-                <button onClick={this.screenshot}>capture</button>
+            <h1>react-webcam</h1>
+            <Webcam
+              ref='webcam'
+            />
+            <div>
+              <h2>CSS Filters</h2>
+              <div className='webcams'>
+                <Webcam width='212' height='160'/>
+                <Webcam width='212' height='160'/>
+                <Webcam width='212' height='160'/>
+                <Webcam width='212' height='160'/>
+                <Webcam width='212' height='160'/>
+                <Webcam width='212' height='160'/>
+                <Webcam width='212' height='160'/>
+                <Webcam width='212' height='160'/>
+                <Webcam width='212' height='160'/>
               </div>
-              { this.state.screenshot ? <img src={this.state.screenshot} /> : null }
+            </div>
+            <div>
+              <h2>Screenshots</h2>
+              <div className='screenshots'>
+                <div className='controls'>
+                  <button onClick={this.screenshot}>capture</button>
+                </div>
+                { this.state.screenshot ? <img src={this.state.screenshot} /> : null }
+              </div>
             </div>
           </div>
-        </div>
-      );
-    },
+        );
+      },
 
-    screenshot: function() {
-      var screenshot = this.refs.webcam.getScreenshot();
-      this.setState({screenshot: screenshot});
-    }
-  });
+      screenshot: function() {
+        var screenshot = this.refs.webcam.getScreenshot();
+        this.setState({screenshot: screenshot});
+      }
+    });
 
-  React.render(<App/>, document.body);
-</script>
+    ReactDOM.render(<App/>, document.getElementById('root'));
+  </script>
 </body>
 </html>
