Update to latest Babel. Switch to using preset-env

--- a/examples/index.html
+++ b/examples/index.html
@@ -58,29 +58,35 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="https://unpkg.com/react@15.5.4/dist/react.min.js"></script>
-  <script src="https://unpkg.com/react-dom@15.5.4/dist/react-dom.min.js"></script>
+  <script src="https://unpkg.com/react@15.5.4/dist/react.js"></script>
+  <script src="https://unpkg.com/react-dom@15.5.4/dist/react-dom.js"></script>
   <script src="https://unpkg.com/babel-transform-in-browser@6.4.6/dist/btib.min.js"></script>
   <script src="../dist/react-webcam.js"></script>
   <script type="text/es2015">
     // getUserMedia only works for secure pages
     if (!/https/.test(window.location.protocol)) window.location.protocol = 'https://';
 
-    var App = React.createClass({
-      getInitialState: function() {
-        return {
+    class App extends React.Component {
+      constructor(props) {
+        super(props);
+        this.state = {
           screenshot: null,
           tab: 0
         };
-      },
+      }
 
-      render: function() {
+      handleClick = () => {
+        const screenshot = this.webcam.getScreenshot();
+        this.setState({ screenshot });
+      }
+
+      render() {
         return (
           <div>
             <h1>react-webcam</h1>
             <Webcam
               audio={false}
-              ref='webcam'
+              ref={node => this.webcam = node}
             />
             <div>
               <h2>CSS Filters & style prop</h2>
@@ -139,22 +145,17 @@
               <h2>Screenshots</h2>
               <div className='screenshots'>
                 <div className='controls'>
-                  <button onClick={this.screenshot}>capture</button>
+                  <button onClick={this.handleClick}>capture</button>
                 </div>
-                { this.state.screenshot ? <img src={this.state.screenshot} /> : null }
+                {this.state.screenshot ? <img src={this.state.screenshot} /> : null}
               </div>
             </div>
           </div>
         );
-      },
-
-      screenshot: function() {
-        var screenshot = this.refs.webcam.getScreenshot();
-        this.setState({screenshot: screenshot});
       }
-    });
+    }
 
-    ReactDOM.render(<App/>, document.getElementById('root'));
+    ReactDOM.render(<App />, document.getElementById('root'));
   </script>
 </body>
 </html>
