defined a new resolution for the webcam example

--- a/examples/index.html
+++ b/examples/index.html
@@ -80,6 +80,7 @@
             <h1>react-webcam</h1>
             <Webcam
               ref='webcam'
+              width='960' height='640'
             />
             <div>
               <h2>CSS Filters</h2>
