Include external prop-types in example

--- a/examples/index.html
+++ b/examples/index.html
@@ -60,6 +60,7 @@
   <div id="root"></div>
   <script src="https://unpkg.com/react@15.5.4/dist/react.js"></script>
   <script src="https://unpkg.com/react-dom@15.5.4/dist/react-dom.js"></script>
+  <script src="https://unpkg.com/prop-types@15.6.1/prop-types.js"></script>
   <script src="https://unpkg.com/babel-transform-in-browser@6.4.6/dist/btib.min.js"></script>
   <script src="../dist/react-webcam.js"></script>
   <script type="text/es2015">
