--- a/examples/index.html
+++ b/examples/index.html
@@ -177,7 +177,7 @@
       }
 
       screenshot = () => {
-        var screenshot = this.webcam.getScreenshot();
+        const screenshot = this.webcam.getScreenshot();
         this.setState({screenshot: screenshot});
       }
 
